--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>白川凌太のWebサイト</title>
     <link rel="icon" href="favicon.ico">
-    <meta name="description" content="白川凌太のポートフォリオサイトです">
+    <meta name="description" content="白川凌太の自己紹介サイトです">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -16,19 +16,8 @@
         <div class="info">
           <h1>白川凌太</h1>
           <p>生年月日：1997.9.17</p>
+          <p>在籍：岡山大学理学部物理学科</p>
           <p>出身：大分県</p>
-          <ul>
-            <li>
-              <a href="https://dotinstall.com" target="_blank">
-                <img src="img/blog.png" width="20" height="20" alt="ブログサイトへのリンク画像です">
-              </a>
-            </li>
-            <li>
-              <a href="https://dotinstall.com" target="_blank">
-                <img src="img/phots.png" width="20" height="20" alt="写真サイトへのリンク画像です">
-              </a>
-            </li>
-          </ul>
         </div>
       </div>
     </header>
@@ -60,19 +49,19 @@
       <p>特に書くことがなかったので、最近聞いている音楽を載せます。普段Apple Musicを使って音楽を聴いています。ジャニーズが嵐しかないので憤りを感じています。</p>
       <ul>
         <li>
-         <p> Da-iceは花村想太くんの歌声が好きで聞いています。</p>
+         <p> Da-iCEは花村想太くんの歌声が好きで聞いています。</p>
           <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/jp/album/%E3%82%8F%E3%82%8B%E3%81%90%E3%81%A1/1440901731?i=1440901929"></iframe>
         </li>
         <li>
-          <p>花村想太くんが率いるNatural lagというバンドです。全部花村想太くんが歌っているので最高です。</p>
+          <p>花村想太くんが率いるNatural Lagというバンドです。全部花村想太くんが歌っているので最高です。</p>
           <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/jp/album/%E8%9C%83%E6%B0%97%E6%A5%BC/1493904549?i=1493904555"></iframe>
         </li>
         <li>
-          <p>皆さんご存じのヒゲダン。ドラマを全く見ていないのに歌は覚えました。</p>
+          <p>みんな知ってるヒゲダン。ドラマを全く見ていないのに曲は覚えました。</p>
           <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/jp/album/pretender/1459216693?i=1459216694"></iframe>
         </li>
         <li>
-          <p>嵐はジャニーズの中では特に好きというわけではないですが、懐かしい曲が多いです。</p>
+          <p>嵐はジャニーズの中で特に好きというわけではないですが、懐かしい曲が多いです。</p>
           <iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/jp/album/love-so-sweet/1485857244?i=1485857408"></iframe>
         </li>
         <li>
@@ -83,7 +72,7 @@
     </section>
   </section>
     <footer>
-      <p>(c) ShirakawaRyota</p>
+      <p>(c) 2020 ShirakawaRyota</p>
     </footer>
   </body>
 </html>
