--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           大学は物理学科に入り意味不明な数式と日夜格闘しています。
           生まれ育った大分県を離れ、現在は岡山県に住んでいます。
           ジャニーズが好きでたまにコンサートに行ってます。
-          最近は、機械学習に興味がありますが、数年間TeXのマークアップ以外でコーディングをやっていなかったので再勉強しています。
+          最近は、機械学習に興味を持っていますが、数年間TeXのマークアップ以外でコーディングをやっていなかったので再勉強しています。
         </p>
       </section>
     </section>
