--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
           <p>出身：大分県</p>
         </div>
       </div>
+      <ul>
+        <a href="#link_intro"><li>自己紹介</li></a>
+        <a href="#link_career"><li>略歴</li></a>
+        <a href="#link_music"><li>音楽</li></a>
+      </ul>
     </header>
 
 <section class="contents">
     <section class="intro">
-      <h1>自己紹介</h1>
+      <a name="link_intro"><h1>自己紹介</h1></a>
       <section>
         <p>
           白川凌太です。高専から理学部に編入学した変わり者です。
@@ -32,12 +37,12 @@
           大学は物理学科に入り意味不明な数式と日夜格闘しています。
           生まれ育った大分県を離れ、現在は岡山県に住んでいます。
           ジャニーズが好きでたまにコンサートに行ってます。
-          最近は、機械学習に興味を持っていますが、数年間TeXのマークアップ以外でコーディングをやっていなかったので再勉強しています。
+          最近は、機械学習に興味がありますが、数年間TeXのマークアップ以外でコーディングをやっていなかったので再勉強しています。
         </p>
       </section>
     </section>
     <section class="career">
-      <h1>略歴</h1>
+      <a name="link_career"><h1>略歴</h1></a>
       <section>
         <p>2013.3　大分市立城東中学校　卒業</p>
         <p>2018.3　大分工業高等専門学校　情報工学科　卒業 </p>
@@ -45,7 +50,7 @@
       </section>
     </section>
     <section class="music">
-      <h1>音楽</h1>
+      <a name="link_music"><h1>音楽</h1></a>
       <p>特に書くことがなかったので、最近聞いている音楽を載せます。普段Apple Musicを使って音楽を聴いています。ジャニーズが嵐しかないので憤りを感じています。</p>
       <ul>
         <li>
